# Phishified-phishing-simulation-campaigns

./: .gitignore  AGENTS.md  build_output.txt  package-lock.json  package.json  test_render.py
backend/: ARCHITECTURE.md  _check_login.py  celery.py  dev.db  pyproject.toml  requirements.txt  tokentest.http
backend/apps/accounts/: admin.py  managers.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  (+1 more)
backend/apps/analytics/: pdf_report.py  serializers.py  services.py  urls.py  views.py
backend/apps/audit/: admin.py  models.py  services.py
backend/apps/campaigns/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/dashboard/: serializers.py  views.py
backend/apps/email/: apps.py  services.py  tasks.py
backend/apps/employees/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/landing_pages/: admin.py  models.py  public_urls.py  serializers.py  urls.py  views.py
backend/apps/notifications/: models.py  services.py
backend/apps/organizations/: admin.py  crypto.py  models.py  serializers.py  urls.py  views.py
backend/apps/reports/: models.py  serializers.py  urls.py  views.py
backend/apps/templates/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/tracking/: services.py  urls.py  views.py
backend/apps/training/: admin.py  models.py  serializers.py  urls.py  views.py
backend/config/: urls.py
backend/config/settings/: base.py  development.py  production.py
backend/requirements/: base.txt  development.txt  production.txt
(+123 files in other folders)
