[project]
name = "phishified"
version = "0.1.0"
description = "Phishing simulation platform — Django backend"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<5.2",
    "djangorestframework>=3.15,<4",
    "djangorestframework-simplejwt>=5.4,<6",
    "django-cors-headers>=4.6,<5",
    "django-filter>=24.3,<25",
    "django-celery-beat>=2.7,<3",
    "celery>=5.4,<6",
    "redis>=5.2,<6",
    "psycopg2-binary>=2.9,<3",
    "python-dotenv>=1.0,<2",
]
